    + [FL] Add --tags-from-file option to make it easier to specify
      a long list of tags.

  * lib/Lintian/Collect/Binary.pm:
    + [ADB] When parsing objdump-info, indicate whether a shared object is
      an Ocaml executable.  Also add information on segments which various
      checks scripts use which hadn't made it here yet.
    + [ADB] Make index() return a hash rather than an array
  * lib/Read_taginfo.pm:
    + [FL] Handle URLs in the Ref: field.

  * man/lintian.1
    + [ADB] Update the list of check scripts, removing the no longer present
      deb-format and perl and adding the nmu script.
    + [FL] Document the new --tags/-T option.
    + [FL] Document the new --tags-from-file option.

  * testset/fields:
    + [ADB] New testset from Tobias Quathamer (including some tags which
      previously weren't tested)
  * testset/tags.scripts{,.sed}:
    + [ADB] Munge .changes filenames so that the tests produce consistent
      output across architectures

 -- 

lintian (1.24.2) unstable; urgency=low

  The "welcome Adam D. Barratt!" release.
  
  * checks/binaries.desc:
    + [ADB] Add some FHS references.  Thanks Jordà Polo.
  * checks/changelog-file{,.desc}:
    + [ADB] Add missing "use Dep". Thanks gregor herrmann (Closes: #488397)
    + [RA] Ignore "CNRI OPEN SOURCE GPL-COMPATIBLE LICENSE AGREEMENT" when
      looking for missing GPL references.  Thanks, Scott Kitterman.
      (Closes: #490264)
    + [ADB] Fix a typo in the description of syntax-error-in-debian-changelog.
      Thanks Jordà Polo.
  * checks/copyright-file{,.desc}:
    + [ADB] Check for over-long lines in copyright files.  (Closes: #479651)
  * checks/cruft{,.desc}:
    + [ADB] Check for BTS control directories in source packages and diffs
      in addition to the existing binary package checks.  (Closes: #481787)
  * checks/debconf{,.desc}:
    + [ADB] Warn about the use of "_Choices" in templates file and suggest
      using "__Choices" instead (Closes: #481152)